--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react": "^6.24.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-react": "^7.14.2",
+    "express": "^4.17.1",
     "firebase": "^7.9.3",
     "js-base64": "^2.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "mongoose": "^5.9.21",
+    "multer": "^1.4.2",
     "next": "^9.2.2",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^4.0.2",
